# pgscope

./: .gitignore  README.md  backlog.md  index.html  package.json  plan.md  pnpm-lock.yaml  tasks.md  tsconfig.json  vite.config.ts
.claude/: launch.json
.github/workflows/: ci.yml  release.yml
design/: Postgres Explorer.dc.html  README.md
dev/: README.md  docker-compose.yml  generate.sql  seed.sql
dev/linux-smoke/: Dockerfile  run.sh
scripts/: screenshots.mjs
src/: App.tsx  main.tsx
src-tauri/: Cargo.toml  build.rs  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: commands.rs  error.rs  lib.rs  main.rs  secrets.rs  state.rs  store.rs
src-tauri/src/db/: cell.rs  connect.rs  explain.rs  grid.rs  introspect.rs  mod.rs  query.rs  rowfmt.rs
src-tauri/src/repl/: catalog.rs  complete.rs  lexer.rs  meta.rs  mod.rs  pattern.rs  session.rs  table.rs
src-tauri/tests/: integration.rs
src/components/: CellExpansion.tsx  ConnectModal.test.tsx  ConnectModal.tsx  ContextMenu.tsx  DataGrid.tsx  DetailsPanel.tsx  GridHeader.test.tsx  GridHeader.tsx  PlanTree.tsx  PromptModal.test.tsx  PromptModal.tsx  QueryEditor.tsx  Relationships.tsx  Sidebar.tsx  Terminal.tsx  Titlebar.tsx  Toolbar.tsx
src/lib/: cellColor.test.ts  cellColor.ts  columnLayout.test.ts  columnLayout.ts  demo.ts  editorTheme.ts  erLayout.test.ts  erLayout.ts  format.test.ts  format.ts  gridMenu.test.ts  gridMenu.ts  ipc.ts  jsonHighlight.test.ts  jsonHighlight.ts  paneSize.test.ts  paneSize.ts  savedMenu.test.ts  savedMenu.ts  savedTree.test.ts  (+3 more)
(+15 files in other folders)
