[package]
name = "pgscope"
version = "0.1.0"
description = "A PostgreSQL explorer with a docked psql pane"
authors = ["pgscope"]
edition = "2021"
rust-version = "1.77"

[lib]
name = "pgscope_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["macos-private-api"] }
tauri-plugin-clipboard-manager = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["rt-multi-thread", "macros", "sync", "time"] }
tokio-postgres = { version = "0.7", features = [
  "with-serde_json-1",
  "with-uuid-1",
  "with-chrono-0_4",
] }
deadpool-postgres = "0.14"
tokio-postgres-rustls = "0.13"
rustls = { version = "0.23", default-features = false, features = ["ring", "logging", "tls12", "std"] }
webpki-roots = "0.26"
thiserror = "2"
keyring = { version = "3", features = ["apple-native", "windows-native", "sync-secret-service"] }
uuid = { version = "1", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
unicode-width = "0.2"
futures-util = "0.3"
dirs = "5"
tauri-plugin-window-state = "2"

[features]
# Integration tests that require a live PostgreSQL fixture (see dev/).
integration = []

[profile.release]
codegen-units = 1
lto = true
opt-level = "s"
panic = "abort"
strip = true
